2009-01-19  Ankit Jain  <radical@gmail.com>

	Abstract out platform specific bits.
	* src/IDesktopApplication.cs: New.
	* src/PlatformService.cs: New.
	* src/Services.cs: New.

	* src/GnomeApplication.cs: New. Implement IDesktopApplication.
	* src/GtkApplication.cs: New. Likewise.
	(SetProcessName): Move here from .. 
	* src/Utilities.cs (SetProcessName): .. here.

	* src/GnomePlatformService.cs: New. Implement PlatformService.
	* src/WindowsPlatformService.cs: New. Likewise.

	* src/Application.cs: Track api changes.

	* Makefile.am: Add the new files.
	* giver.mdp: Likewise.

2008-03-20  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs, src/TargetService.cs: Fixed
	  up the tasque integration for drag and drop

2008-03-19  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs, src/RequestHandler.cs, src/Protocol.cs: Added more
	  hackish code to support Tasque Tasks much like Tomboy notes

2008-02-13  Andrew Jorgensen <andrew.jorgensen@gmail.com> 

	* src/ServiceLocator.cs, src/GiverService.cs: Replaced avahi-sharp code with
	  Mono.Zeroconf
	* src/Makefile.am, giver.mdp, configure.ac: Depends on Mono.Zeroconf instead
	  of avahi-sharp

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: updated to 0.1.9

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated for Release 0.1.8

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* AUTHORS, MAINTAINERS: Fixed email address
	* src/PreferencesDialog.cs: fixed email address
	* src/Application.cs: Fixed about

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* AUTHORS: Updated to contain Calvin and Scott
	* src/Utilities.cs, src/ServiceInfo.cs, src/TargetWindow.cs,
	  src/Logger.cs, src/GiverMenuItem.cs, src/PreferencesDialog.cs,
	  src/Defines.cs.in, src/ServiceLocator.cs, src/SendingHandler.cs,
	  src/RequestHandler.cs, src/UriList.cs, src/GiverService.cs,
	  src/Preferences.cs, src/Protocol.cs, src/Application.cs,